# gitcraft

./: Gitcraft.hs  README.md  build.sh  compare.sh  default.nix  derivation.nix  git-state.sh  gitcraft-state.sh  gitcraft.cabal  index.md  shell.nix
docs/: index.html
docs/static/css/: inter.css  style.css  styles.css  tachyons.min.v4.11.1.css
